# sokopoko

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
ext/KHR/: khrplatform_gles2.h
ext/glad/: glad.h  glad_gles2.h
src/: animation.cpp  animation.hpp  animation_player.cpp  animation_player.hpp  atlas.cpp  atlas.hpp  camera.cpp  camera.hpp  engine_type.hpp  framebuffer.cpp  framebuffer.hpp  glad.c  glad_gles2.c  input.cpp  input.hpp  main.cpp  meta.hpp  registry.hpp  render_list.cpp  render_list.hpp  renderlist.hpp  resource.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  state.hpp  string.cpp  string.hpp  texture.cpp  texture.cpp~  texture.hpp  timer.hpp  vbuffer.cpp  vbuffer.hpp  window.cpp  window.hpp
src/imgui/: inspector.cpp  inspector.hpp
src/sokopoko/: soko.cpp  soko.hpp  soko_cutscene.hpp  soko_dialog.hpp  soko_imgui.cpp  soko_imgui.hpp  soko_map.cpp  soko_map.hpp  soko_sky.cpp  soko_sky.hpp  soko_transition.hpp  sokoban.cpp  sokoban.hpp  state_game.cpp  state_game.hpp  state_menu.cpp  state_menu.hpp
